# KMCThinFilm-archive

./: CMakeLists.txt  KMCThinFilmVersion.cmake  README
doc/: CMakeLists.txt
doc/doxygen/: ActiveSectorsCompact.eps  ActiveSectorsCompact.odg  Doxyfile.in  FallingAndClimbingParticles.eps  FallingAndClimbingParticles.odg  LatticeModel.eps  LatticeModel.odg  OffsetsFractalSim.eps  OffsetsFractalSim.odg  PartitionedLatticeCompact.eps  PartitionedLatticeCompact.odg  PartitionedLatticeRow.eps  PartitionedLatticeRow.odg  README  RunDoxygen.cmake  compilation.txt  concepts_and_algorithms.txt  header.tex  illustrating_use_by_example.txt  mainpage.txt  references.bib  testFractalSnapshots.eps  testFractalSnapshots.odg  testParBadSnapshots.eps  testParBadSnapshots.odg  testPatSubSnapshots.eps  testPatSubSnapshots.odg  tiled16x16Domain_annotated.eps  tiled16x16Domain_annotated.odg
doc/doxygen/auto/: header.el
doc/example-code/testBallisticDep1/: EventsAndActions.cpp  EventsAndActions.hpp  InitLattice.cpp  InitLattice.hpp  Makefile  README  make.inc  testBallisticDep.cpp
doc/example-code/testBallisticDep1/testdir_ref/: snapshot1.3D  snapshot10.3D  snapshot11.3D  snapshot12.3D  snapshot13.3D  snapshot14.3D  snapshot15.3D  snapshot16.3D  snapshot17.3D  snapshot18.3D  snapshot19.3D  snapshot2.3D  snapshot20.3D  snapshot3.3D  snapshot4.3D  snapshot5.3D  snapshot6.3D  snapshot7.3D  snapshot8.3D  snapshot9.3D
doc/example-code/testBallisticDep2/: EventsAndActions.cpp  EventsAndActions.hpp  InitLattice.cpp  testBallisticDep.cpp
doc/example-code/testBallisticDep2/testdir_ref/: snapshot1.3D  snapshot10.3D  snapshot11.3D  snapshot12.3D  snapshot13.3D  snapshot14.3D  snapshot15.3D  snapshot16.3D  snapshot17.3D  (+11 more)
doc/example-code/testFractal/: EventsAndActions.cpp  EventsAndActions.hpp  README  mkMakeInc.sh  testFractal.cpp
doc/example-code/testFractal_parallel/: EventsAndActions.cpp  EventsAndActions.hpp  Makefile  README  getOverheadViewAndCovData.py  make.inc  mkMakeInc.sh  testFractal.cpp
doc/example-code/testFractal_semi_manual_track/: EventsAndActions.hpp  Makefile  README  testFractal.cpp
doc/example-code/testPatternedSurface1/: EventsAndActions.cpp  EventsAndActions.hpp  InitLattice.cpp  InitLattice.hpp  Makefile  README  getOverheadViewAndCovData.py  make.inc  mkSubstratePattern.py  testPatternedSurface.cpp  tiled16x16Domain.gpdat
doc/example-code/testPatternedSurface2/: EventsAndActions.cpp  EventsAndActions.hpp  Makefile  PhysicalConstants.hpp  README  mkSubstratePattern.py  testPatternedSurface.cpp
doc/html/: CellCenteredGroupPropensities_8hpp.html  CellCenteredGroupPropensities_8hpp.js  CellCenteredGroupPropensities_8hpp_source.html  CellInds_8hpp.html  CellInds_8hpp.js  CellInds_8hpp_source.html  CellNeighOffsets_8hpp.html  CellNeighOffsets_8hpp.js  CellNeighOffsets_8hpp_source.html  CellNeighProbe_8hpp.html  CellNeighProbe_8hpp.js  CellNeighProbe_8hpp_source.html  CellsToChange_8hpp_source.html  ErrorHandling_8hpp.html  ErrorHandling_8hpp.js  ErrorHandling_8hpp_source.html  EventExecutorGroup_8hpp.html  EventExecutorGroup_8hpp.js  EventExecutorGroup_8hpp_source.html  EventExecutor_8hpp.html  EventExecutor_8hpp.js  EventExecutor_8hpp_source.html  IdsOfSolvers_8hpp.html  IdsOfSolvers_8hpp.js  IdsOfSolvers_8hpp_source.html  Lattice_8hpp.html  Lattice_8hpp.js  Lattice_8hpp_source.html  MakeEnum_8hpp.html  MakeEnum_8hpp.js  MakeEnum_8hpp_source.html  PeriodicAction_8hpp.html  PeriodicAction_8hpp.js  PeriodicAction_8hpp_source.html  RandNumGenDCMT_8hpp.html  RandNumGenDCMT_8hpp.js  RandNumGenDCMT_8hpp_source.html  RandNumGenMT19937_8hpp.html  RandNumGenMT19937_8hpp.js  RandNumGenMT19937_8hpp_source.html  (+135 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  files_3.js  (+44 more)
doc/latex/: CellCenteredGroupPropensities_8hpp.tex  CellCenteredGroupPropensities_8hpp_source.tex  CellInds_8hpp.tex  CellInds_8hpp_source.tex  CellNeighOffsets_8hpp.tex  CellNeighOffsets_8hpp_source.tex  CellNeighProbe_8hpp.tex  CellNeighProbe_8hpp_source.tex  CellsToChange_8hpp_source.tex  ErrorHandling_8hpp.tex  ErrorHandling_8hpp_source.tex  EventExecutorGroup_8hpp.tex  EventExecutorGroup_8hpp_source.tex  EventExecutor_8hpp.tex  EventExecutor_8hpp_source.tex  IdsOfSolvers_8hpp.tex  IdsOfSolvers_8hpp_source.tex  Lattice_8hpp.tex  Lattice_8hpp_source.tex  MakeEnum_8hpp.tex  MakeEnum_8hpp_source.tex  PeriodicAction_8hpp.tex  PeriodicAction_8hpp_source.tex  RandNumGenDCMT_8hpp.tex  RandNumGenDCMT_8hpp_source.tex  RandNumGenMT19937_8hpp.tex  RandNumGenMT19937_8hpp_source.tex  RandNumGenRngStreams_8hpp.tex  RandNumGenRngStreams_8hpp_source.tex  RandNumGen_8hpp.tex  RandNumGen_8hpp_source.tex  SimulationState_8hpp.tex  SimulationState_8hpp_source.tex  Simulation_8hpp.tex  Simulation_8hpp_source.tex  TimeIncrSchemeVars_8hpp.tex  TimeIncrSchemeVars_8hpp_source.tex  annotated.tex  citelist.tex  classKMCThinFilm_1_1AddEmptyPlanes.tex  (+65 more)
src/: CMakeLists.txt  CallMemberFunction.hpp  CellCenteredGroupPropensities.hpp  CellInds.cpp  CellInds.hpp  CellNeighOffsets.cpp  CellNeighOffsets.hpp  CellNeighProbe.cpp  CellNeighProbe.hpp  CellsToChange.cpp  CellsToChange.hpp  ErrorHandling.cpp  ErrorHandling.hpp  EventExecutor.hpp  EventExecutorGroup.cpp  EventExecutorGroup.hpp  EventId.cpp  EventId.hpp  EventIdMap.hpp  IJK.cpp  IJK.hpp  IdsOfSolvers.hpp  KMC_Config.hpp.in  Lattice.cpp  Lattice.hpp  MakeEnum.hpp  MultiIndexBimap.hpp  PeriodicAction.hpp  RandNumGen.hpp  RandNumGenDCMT.cpp  RandNumGenDCMT.hpp  RandNumGenMT19937.cpp  RandNumGenMT19937.hpp  RandNumGenRngStreams.cpp  RandNumGenRngStreams.hpp  Simulation.cpp  Simulation.hpp  SimulationState.hpp  Solver.cpp  Solver.hpp  (+10 more)
(+1 files in other folders)
